- Fixed days list date overflow

--- a/src/styles/components/planner/_days-list.scss
+++ b/src/styles/components/planner/_days-list.scss
@@ -53,6 +53,8 @@
 }
 
 .days-list-item-date {
+    font-size: 13px !important;
+    font-weight: bold !important;
     padding-top: 3px;
 }
 
